Update Projects Content
Update CSS for Projects Content

--- a/.gitignore
+++ b/.gitignore
@@ -24,3 +24,5 @@ resources/Exercise v3.0_files/codemirror.js.download
 resources/Exercise v3.0_files/apstag.js.download
 resources/Exercise v3.0_files/analytics.js.download
 resources/Exercise v3.0.html
+css/bootstrap_test.css
+index_bootstrap.html
